blockml/test/errors/12_chart/e171/e171m.model
model: e171m
joins:
- from_view: e171_one
  as: a
